tests/fixtures/invalid/str_lshift_bytes.py
# Cannot left shift Str and Bytes
x: str = "hello" << b"hello"
